--- a/shop.html
+++ b/shop.html
@@ -517,7 +517,7 @@
                     hasOptions: true,
                     optionType: 'Character',
                     options: [
-                        { id: 'premium-tray-smoking', name: 'Smoking Character', price: 40.00, image: '/img/tray-smoking.jpg' },
+                        { id: 'premium-tray-smoking', name: 'Shooting Character', price: 40.00, image: '/img/tray-smoking.jpg' },
                         { id: 'premium-tray-drinking', name: 'Drinking Character', price: 42.00, image: '/img/tray-drinking.jpg' },
                         { id: 'premium-tray-themed', name: 'Smoking Themed', price: 45.00, image: '/img/tray-themed.jpg' },
                         { id: 'premium-tray-custom', name: 'Custom Design', price: 50.00, image: '/img/tray-custom.jpg' }
