--- a/collectables.html
+++ b/collectables.html
@@ -498,7 +498,61 @@
                         { id: 'northern-frost-5', size: '5 Pack', regularPrice: 50, salePrice: 45 },
                         { id: 'northern-frost-10', size: '10 Pack', regularPrice: 95, salePrice: 80 }
                     ]
-                }
+                },
+				'purple-haze-kush': {
+					id: 'purple-haze-kush',
+					name: 'Purple Haze Kush',
+					type: 'Hybrid (60% Indica / 40% Sativa)',
+					status: 'coming-soon',
+					image: '/img/strain5-placeholder.jpg',
+					cardImage: '/img/strain5-square.jpg',
+					thc: '24-27%',
+					cbd: '0.1-0.3%',
+					flowering: '8-9 Weeks',
+					yield: 'Indoor: 450-550g/m² | Outdoor: 700-900g/plant',
+					seeds: 'Feminized',
+					description: 'Purple Haze Kush blends classic Purple Haze with OG Kush genetics for a potent hybrid experience. This strain features vibrant purple and deep green buds with a thick trichome coating. The aroma combines grape, berry, and earthy notes with subtle diesel undertones, creating a complex sensory experience.',
+					growingTips: 'Moderate difficulty strain that benefits from regular LST and topping. Needs good ventilation to prevent humidity issues during flowering. Prefers slightly higher calcium levels during mid-flowering for optimal resin production. Maintains a manageable height with proper training techniques.',
+					effects: 'Delivers a balanced high that starts with cerebral stimulation and creative energy before transitioning to deep physical relaxation. Great for social situations, creative projects, and unwinding after a long day. May help with stress, mild pain, and mood enhancement without excessive sedation.',
+					images: [
+						'/img/strain5-plant1.jpg',
+						'/img/strain5-plant2.jpg',
+						'/img/strain5-bud1.jpg',
+						'/img/strain5-bud2.jpg'
+					],
+					packOptions: [
+						{ id: 'purple-haze-kush-3', size: '3 Pack', regularPrice: 40, salePrice: 35 },
+						{ id: 'purple-haze-kush-5', size: '5 Pack', regularPrice: 55, salePrice: 50 },
+						{ id: 'purple-haze-kush-10', size: '10 Pack', regularPrice: 100, salePrice: 85 }
+					]
+				},
+				'lemon-diesel-frost': {
+					id: 'lemon-diesel-frost',
+					name: 'Lemon Diesel Frost',
+					type: 'Sativa Dominant (70% Sativa / 30% Indica)',
+					status: 'coming-soon',
+					image: '/img/strain6-placeholder.jpg',
+					cardImage: '/img/strain6-square.jpg',
+					thc: '22-25%',
+					cbd: '0.4-0.7%',
+					flowering: '9-10 Weeks',
+					yield: 'Indoor: 500-600g/m² | Outdoor: 650-800g/plant',
+					seeds: 'Feminized',
+					description: 'Lemon Diesel Frost combines Lemon Skunk and NYC Diesel genetics with enhanced cold resistance. This sativa-dominant strain produces elongated, frost-covered buds with bright orange pistils. Expect a potent citrus aroma with diesel fuel undertones and surprising notes of sweet candy when properly cured.',
+					growingTips: 'Grows quite tall with significant stretch during early flowering, so early training is essential. Thrives in well-draining soil with moderate to high nutrient levels. Can handle colder temperatures than typical sativas. Benefits from silicon supplementation for stronger stems to support heavy bud development.',
+					effects: 'Provides energetic, uplifting effects with enhanced focus and creativity, making it ideal for daytime use. The mental stimulation is balanced with mild body relaxation that does not impede functionality. Excellent for productivity, social activities, and outdoor adventures. May help with depression, fatigue, and mild pain.',
+					images: [
+						'/img/strain6-plant1.jpg',
+						'/img/strain6-plant2.jpg',
+						'/img/strain6-bud1.jpg',
+						'/img/strain6-bud2.jpg'
+					],
+					packOptions: [
+						{ id: 'lemon-diesel-frost-3', size: '3 Pack', regularPrice: 40, salePrice: 35 },
+						{ id: 'lemon-diesel-frost-5', size: '5 Pack', regularPrice: 55, salePrice: 50 },
+						{ id: 'lemon-diesel-frost-10', size: '10 Pack', regularPrice: 100, salePrice: 85 }
+					]
+				}												
             };
             
             // Combine all product data for easier access
