--- a/shop.html
+++ b/shop.html
@@ -574,12 +574,12 @@
                 },
 				'grinder1': {
 					id: 'grinder1',
-					name: 'Premium Grinder',  // Removed "Metal" as requested
+					name: 'Premium Grinder',  
 					status: 'available',
 					image: '/img/grinder1-placeholder.jpg',
 					price: 28.99,
 					category: 'accessory',
-					description: 'Our premium 4-piece grinder is crafted from high-quality aircraft-grade aluminum for durability and smooth grinding action. Features razor-sharp cutting teeth, multiple chambers including a pollen catcher with scraper tool, and a magnetic lid to prevent spills. Available in multiple designs with laser-etched artwork.',
+					description: 'Our premium 3-piece grinder (plus jar) is crafted from high-quality resin for durability and smooth grinding action. Features amazing cutting teeth and easy grip. Available in multiple designs.',
 					hasOptions: true,
 					optionType: 'Design',
 					options: [
